# bw-meter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  INSTALL.md  Makefile  README.md  pyproject.toml
src/bw_meter/: __init__.py  _version.py  cli.py  db.py  distiller.py  timeutil.py
systemd/: bw-meter-distill.service  bw-meter-distill.timer  ptcpdump@.service
tests/: test_cli.py  test_db.py  test_distiller.py  test_timeutil.py
